--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body{
 	padding:2%;
 	border:1px solid black;
 	border-radius: 5px;
+	height:30%;
 }
 .content{
 	width: 70%;
@@ -21,6 +22,24 @@ body{
 	border: 1px solid black;
 	padding:2%;
 }
+.content h2{
+	color: red;
+}
+
+table{
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+table td{
+    border: 2px solid #ddd;
+    padding: 8px;
+}
+
+table tr:nth-child(even){background-color: #f2f2f2;}
+
+
+
 @media only screen and (min-width: 320px) and (max-width: 480px){
  
  body{
